--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Votre nom - Portfolio</title>
+    <link rel="stylesheet" href="style.css"> </head>
+<body>
+    <header>
+        <h1>Votre nom</h1>
+        <p>Votre titre ou une courte description de vous-même</p>
+        <a href="https://votresiteweb.com" target="_blank">Votre site web</a> <a href="#projets" class="bouton">Mes projets</a> </header>
+
+    <main>
+        <section id="parcours">
+            <h2>Mon parcours</h2>
+            <p>Racontez votre parcours professionnel et vos expériences pertinentes. Vous pouvez inclure vos formations, vos compétences et vos réalisations.</p>
+        </section>
+
+        <section id="projets">
+            <h2>Mes projets</h2>
+            <div class="galerie-projets">
+                <div class="projet">
+                    <img src="image-projet1.jpg" alt="Titre du projet 1">
+                    <h3>Titre du projet 1</h3>
+                    <p>Brève description du projet 1</p>
+                    <a href="https://lien-projet1.com" target="_blank">Voir le projet</a> </div>
+                </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Votre nom</p>
+        <a href="mailto:votreadresseemail@exemple.com">Contactez-moi</a> <ul class="reseaux-sociaux">
+            <li><a href="https://www.linkedin.com/in/votrenom/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/votrenom" target="_blank"><i class="fab fa-github"></i></a></li>
+            </ul>
+    </footer>
+
+    <script src="script.js"></script> </body>
+</html>
